--- a/aliyun/1.云计算acp/1.云服务器ECS.md
+++ b/aliyun/1.云计算acp/1.云服务器ECS.md
@@ -353,8 +353,8 @@ https://help.aliyun.com/knowledge_detail/40609.html
   * `每个实例至少属于一个安全组`，在创建的时候就需要指定。`同一安全组内的实例之间网络互通，不同安全组的实例之间默认内网不通，可以授权两个安全组之间互访`。
 2. [安全组新使用限制 FAQ](https://help.aliyun.com/knowledge_detail/87018.html)  
 > 可以调整安全组规则的数量上限吗？
-  * 不可以，每个安全组最多可以包含 100 条安全组规则。
-  * 目前，一个实例中的每个弹性网卡默认最多可以加入 5 个安全组，所以一个实例的每个弹性网卡最多可以包含 500 条安全组规则，能够满足绝大多数场景的需求。
+  * 不可以，`每个安全组最多可以包含 100 条安全组规则`。
+  * 目前，一个实例中的每个弹性网卡默认`最多可以加入 5 个安全组`，所以一个实例的每个弹性网卡最多可以包含 500 条安全组规则，能够满足绝大多数场景的需求。
 > 为何实例加入安全组时出现超限提示？
   * `作用于一台实例（主网卡）的安全组规则数量上限` = 该实例允许加入的安全组数量 x 每个安全组最大规则数量。
 3. [ECS安全组中规则的优先级执行匹配顺序说明](https://help.aliyun.com/knowledge_detail/40642.html)
