--- a/aliyun/1.云计算acp/3.弹性伸缩.md
+++ b/aliyun/1.云计算acp/3.弹性伸缩.md
@@ -34,7 +34,7 @@ https://help.aliyun.com/document_detail/25858.html
 > 弹性伸缩
   * 弹性伸缩是根据用户的业务需求和策略，自动调整其弹性计算资源的管理服务。其能够在业务增长时自动增加 ECS 实例，并在业务下降时自动减少 ECS 实例。
 > 伸缩组
-  * 伸缩组是具有相同应用场景的 ECS 实例的集合。伸缩组定义了组内 `ECS 实例数的最大值、最小值`及其相关联的`负载均衡实例和 RDS 实例等属性`。
+  * 伸缩组是具有相同应用场景的 ECS 实例的集合。伸缩组定义了组内 `ECS 实例数的最大值、最小值`及其相关联的`负载均衡实例`和 `RDS 实例`等属性。
 > 伸缩配置
   * `伸缩配置定义了用于弹性伸缩的 ECS 实例的配置信息`。
 > 伸缩规则
@@ -79,7 +79,7 @@ https://help.aliyun.com/document_detail/25880.html
 ## 4.3 管理单个伸缩组
 ### 4.3.2 实现自动伸缩
 1. [创建伸缩组](https://help.aliyun.com/document_detail/25882.html)
-  * 伸缩组、SLB 实例和 RDS 实例必须位于同一个地域。
+  * 伸缩组、SLB 实例和 RDS 实例必须位于`同一个地域`。
 2. [创建伸缩规则](https://help.aliyun.com/document_detail/25893.html)
 如果执行伸缩规则后，伸缩组内服务中实例数将大于 伸缩最大实例数 或者小于 伸缩最小实例数，弹性伸缩服务会自动调整扩张或收缩的 ECS 实例数量，保证弹性伸缩结果不会超过数量限制。
 > 示例
