--- a/linux/概念/2.基础网络概念/3.网络层/2.IP地址的组成与分级.md
+++ b/linux/概念/2.基础网络概念/3.网络层/2.IP地址的组成与分级.md
@@ -6,13 +6,13 @@
   * IP(Internet Protocol)是一种网络封包；
   * 封包的表头最重要的就是32位的来源与目的地址；
   * 32 bits的IP分成四小段，每段含有8个bits；
-  * 主要分为Net_ID(网域号码)与Host_ID(主机号码)两部分；
+  * 主要分为`Net_ID(网域号码)`与`Host_ID(主机号码)`两部分；
 * 网域：  
-  * **网域**的定义：在同一个物理网段内，主机的IP具有相同的Net_ID，并且具有独特的Host_ID；
+  * **网域**的定义：`在同一个物理网段内，主机的IP具有相同的Net_ID，并且具有独特的Host_ID`；
   * 同网段内，Net_ID不变，Host_ID不重复；
   * Host_ID不可同时为0也不可同时为1；
-  * Host_ID全为0表示整个网段的地址Network IP；
-  * Host_ID全为1表示广播的地址Broadcast IP；
+  * `Host_ID全为0表示整个网段的地址Network IP`；
+  * `Host_ID全为1表示广播的地址Broadcast IP`；
   * 同网段主机可通过CSMA/CD广播通信，也可通过MAC直接通信；
 
 ## TCP/IP 协议网络上的每一个网络适配器都有一个唯一的 IP 地址.
@@ -44,8 +44,14 @@ IP 地址分为两个部分：
 
 那么转化为十进制（四段）的话，我们就能以第一段中的十进制数来区分 IP 地址到底是哪类地址了。
 
+Class A:    0.xx.xx.xx ~ 127.xx.xx.xx
+Class B:  128.xx.xx.xx ~ 191.xx.xx.xx
+Class C:  192.xx.xx.xx ~ 223.xx.xx.xx
+Class D:  224.xx.xx.xx ~ 239.xx.xx.xx
+Class E:  240.xx.xx.xx ~ 255.xx.xx.xx
 
-参考
+
+## 参考
 
 1 鸟哥服务器端
 2 https://blog.csdn.net/yulyu/article/details/69062288
