--- a/linux/概念/2.基础网络概念/3.网络层/4.0.Netmask, 子网与 CIDR (Classless Interdomain Routing).md
+++ b/linux/概念/2.基础网络概念/3.网络层/4.0.Netmask, 子网与 CIDR (Classless Interdomain Routing).md
@@ -2,6 +2,9 @@
 
 ## Netmask, 或称为 Subnet mask (子网掩码)
 
+当Host_ID全部为0以及全部为1的时候该IP是不可以使用的。
+  * Host_ID全部是0，表示IP是该网段的Network
+  * Host_ID全部是1，表示IP是该网段最后一个IP，也称为Broadcast。
 
 ## 子网切分
 
