--- a/linux/概念/2.基础网络概念/3.网络层/4.1.子网掩码怎么理解.md
+++ b/linux/概念/2.基础网络概念/3.网络层/4.1.子网掩码怎么理解.md
@@ -17,7 +17,7 @@
 192.168.1.192/26
 
 /26是什么鬼？
-255.255.255.192的二进制是多少？ “11111111-11111111-11111111-11”大家数数一共多少个1？不用数了，是26个1，为了简化子网掩码的表示，用/26代替255.255.255.192。
+255.255.255.192的二进制是多少？ “11111111-11111111-11111111-11”大家数数一共多少个1？不用数了，是26个1，为了简化子网掩码的表示，`用/26代替255.255.255.192`。
 
 按位与运算
 我们来看大儿子的网段192.168.1.0/26是如何得到的？
@@ -32,7 +32,7 @@
 首尾地址完全相同的是多少？
 11000000.10101000.00000001.00
 
-数数一共多少位？26位！那么用这个“192.168.1.0/26”就可以表示大儿子所有房间。
+数数一共多少位？`26位`！那么用这个“192.168.1.0/26”就可以表示大儿子所有房间。
 
 对照房间的门牌号码“192.168.1.199”，很显然属于四儿子的。
 
