--- a/program/docker/8.容器网络/3.flannel/4.flannel的连通与隔离.md
+++ b/program/docker/8.容器网络/3.flannel/4.flannel的连通与隔离.md
@@ -10,6 +10,7 @@ ping -c 2 10.2.54.2
 # 64 bytes from 10.2.54.2: seq=0 ttl=62 time=0.606 ms
 # 64 bytes from 10.2.54.2: seq=1 ttl=62 time=0.711 ms
 ### bbox1 能够 ping 到位于不同 subnet 的 bbox2，通过 traceroute 分析一下 bbox1 到 bbox2 的路径。
+# yum install -y traceroute
 traceroute 10.2.54.2
 # traceroute to 10.2.54.2 (10.2.54.2), 30 hops max, 46 byte packets
 #  1  10.2.41.1 (10.2.41.1)  0.023 ms  0.006 ms  0.002 ms
