--- a/program/docker/8.容器网络/4.calico/1.如何部署 Calico 网络.md
+++ b/program/docker/8.容器网络/4.calico/1.如何部署 Calico 网络.md
@@ -8,9 +8,8 @@ Calico 是一个纯三层的虚拟网络方案，Calico 为每个容器分配一
 
 准备服务器
 * etcd: 172.20.62.127
-* host1: 172.20.62.104
+* host1: 172.20.62.110
 * host2: 172.20.62.105
-* host3: 172.20.62.112
 
 Calico 依赖 etcd 在不同主机间共享和交换信息，存储 Calico 网络状态。我们将在 172.20.62.127 上运行 etcd。
 
@@ -19,17 +18,18 @@ Calico 网络中的每个主机都需要运行 Calico 组件，提供容器 inte
 ## 首先启动 etcd。
 
 ```sh
-### 在172.20.62.127 下载etcd
+### 1 启动 etcd
+# 在172.20.62.127 下载etcd
 # ETCD_EVR=v2.3.7
 # ETCD_VER=v3.3.5
 DOWNLOAD_URL=https://github.com/coreos/etcd/releases/download
 mkdir -p /opt/etcd
 curl -L ${DOWNLOAD_URL}/${ETCD_VER}/etcd-${ETCD_VER}-linux-amd64.tar.gz -o /opt/etcd/etcd-${ETCD_VER}-linux-amd64.tar.gz
 tar xzvf /opt/etcd/etcd-${ETCD_VER}-linux-amd64.tar.gz --strip-components=1
-cp /opt/etcd/etcd* /usr/local/bin/
-
-### 1 启动 etcd
-### 在 host 172.20.62.127 上运行如下命令启动 etcd：
+tar xzvf /opt/etcd/etcd-v2.3.7-linux-amd64.tar.gz --strip-components=1
+cp -f /opt/etcd/etcd* /usr/local/bin/
+rm -rf etcd etcdctl default.etcd Documentation/ *.json *.md /usr/local/bin/etcd /usr/local/bin/etcdctl
+# 在 host 172.20.62.127 上运行如下命令启动 etcd：
 etcd -listen-client-urls http://172.20.62.127:2379 -advertise-client-urls http://172.20.62.127:2379
 etcdctl --endpoint=http://172.20.62.127:2379 ls
 etcd -listen-client-urls http://0.0.0.0:2379 -advertise-client-urls http://0.0.0.0:2379
@@ -37,25 +37,42 @@ etcdctl ls /
 ### 2 etcd 安装配置详细方法请参考 flannel 章节。
 ### 3 修改 host1 和 host2 的 Docker daemon 配置文件 vi /etc/sysconfig/docker， 连接 etcd：
 vi /etc/sysconfig/docker
+# 原有配置
+OPTIONS='--selinux-enabled --log-driver=journald --signature-verification=false'
+# 修改后配置
 OPTIONS='--selinux-enabled=false -H tcp://0.0.0.0:2376 -H unix:///var/run/docker.sock --cluster-store=etcd://172.20.62.127:2379'
-### 重启 Docker daemon。
-systemctl daemon-reload
-systemctl restart docker.service
-### docker daemon --cluster-store=etcd://172.20.62.127:2379
-```
-
-## 部署 calico
-
-```sh
-### 下载 calicoctl：
+### 4. 重启 Docker daemon。
+systemctl daemon-reload && systemctl restart docker
+# docker daemon --cluster-store=etcd://172.20.62.127:2379
+### 5. 部署 calico
+# 下载 calicoctl：
 wget -O /usr/local/bin/calicoctl https://github.com/projectcalico/calicoctl/releases/download/v1.6.1/calicoctl
 chmod +x /usr/local/bin/calicoctl
-###  calicoctl node run
+# 在 host1 和 host2 上启动 calico：
+# calicoctl node run
 docker rm -f calico-node
 ETCD_ENDPOINTS=http://172.20.62.127:2379 calicoctl node run --node-image=quay.io/calico/node:v2.6.2
+calicoctl node status # 查看状态
+docker pull docker.io/calico/node:v1.0.2
+docker rm -f calico-node
 ETCD_ENDPOINTS=http://172.20.62.127:2379 calicoctl node run --node-image=docker.io/calico/node:v1.0.2
-### 查看状态
-calicoctl node status
+# 如果无法启动请 参考 “步骤6 清理”
+### 6. 创建 calico 网络
+# 在 host1 或 host2 上执行如下命令创建 calico 网络 cal_ent1：
+docker network create --driver calico --ipam-driver calico-ipam cal_net1
+# --driver calico 指定使用 calico 的 libnetwork CNM driver。
+# --ipam-driver calico-ipam 指定使用 calico 的 IPAM driver 管理 IP。
+# calico 为 global 网络，etcd 会将 cal_net 同步到所有主机。
+docker network ls
+# NETWORK ID          NAME                DRIVER              SCOPE
+# d68c464d4922        cal_net1            calico              global 
+### 6. 清理
+etcdctl rm /docker --recursive
+etcdctl rm /calico --recursive
+etcdctl ls /
+# 测试
+curl -L -X PUT http://172.20.62.127:2379/v2/keys/hello -d value="world"
+curl -L http://172.20.62.127:2379/v2/keys/hello
 ```
 
 ## 启动过程如下：
@@ -65,20 +82,8 @@ calicoctl node status
 ③ 连接 etcd。
 ④ calico 启动成功。
 
-## 创建 calico 网络
-
-```sh
-### 在 host1 或 host2 上执行如下命令创建 calico 网络 cal_ent1：
-docker network create --driver calico --ipam-driver calico-ipam cal_net1
-# --driver calico 指定使用 calico 的 libnetwork CNM driver。
-# --ipam-driver calico-ipam 指定使用 calico 的 IPAM driver 管理 IP。
-### calico 为 global 网络，etcd 会将 cal_net 同步到所有主机。
-docker network ls
-# NETWORK ID          NAME                DRIVER              SCOPE
-# d68c464d4922        cal_net1            calico              global 
-```
-
 ## 参考
 
 1. https://mp.weixin.qq.com/s/7o8QxGydMTUe4Q7Tz46Diw
-2. https://www.cnblogs.com/lkun/p/7857453.html
+2. [centos7下安装docker（15.7容器跨主机网络---calico）](https://www.cnblogs.com/lkun/p/7857453.html)
+3. [如何使用Etcdctl与Etcd——CoreOS的分布式键-值存储](https://blog.csdn.net/zstack_org/article/details/54924651)
