--- a/linux/概念/8.路由观念与路由器设定/4.用Linux系统做策略路由.md
+++ b/linux/概念/8.路由观念与路由器设定/4.用Linux系统做策略路由.md
@@ -2,9 +2,9 @@
 
 今天闲着没事，就测试了一下用Linux系统做策略路由的效果，感觉还不错，下面介绍一下在Linux系统上的配置，三层交换机上的配置在这里就不做介绍了。
 
-一、简单介绍
+## 一、简单介绍
 
-       传通的路由都使用的是一张路由表，只能对目的地址进行路由，而策略路由使用的是多张路由表。如果要配置Linux的策略路由必须使用iproute2的相关命令。虽然我们在配置IP相关的信息时可以使用ifconfig、route等古老的命令，但我们推荐使用iproute2的相关命令，因为iproute2功能强大，能为我们做更多的事情。
+传通的路由都使用的是一张路由表，只能对目的地址进行路由，而策略路由使用的是多张路由表。如果要配置Linux的策略路由必须使用iproute2的相关命令。虽然我们在配置IP相关的信息时可以使用ifconfig、route等古老的命令，但我们推荐使用iproute2的相关命令，因为iproute2功能强大，能为我们做更多的事情。
 
 ## 二、案例配置
 
