--- a/program/docker/8.容器网络/3.flannel/9.k8s与flannel网络原理.md
+++ b/program/docker/8.容器网络/3.flannel/9.k8s与flannel网络原理.md
@@ -2,10 +2,11 @@
 
 k8s与flannel网络原理-Linux运维日志 https://www.centos.bz/2017/06/k8s-flannel-network/
 
-我们这里假设flannel使用VXLAN协议。每台主机都安装有flannel。k8s定义的flannel网络为10.0.0.0/16，各主机的flannel从这个网络申请一个子网。pod1所在的主机的flannel子网为10.0.14.1/24，pod2所在主机的flannel子网为10.0.5.1/24。每台主机有cni0和flannel.1虚拟网卡。cni0为在同一主机pod共用的网桥，当kubelet创建容器时，将为此容器创建虚拟网卡vethxxx，并桥接到cni0网桥。flannel.1是一个tun虚拟网卡，接收不在同一主机的POD的数据，然后将收到的数据转发给flanneld进程。原理图：
-
-
-pod1到pod2的网络
+我们这里假设flannel使用VXLAN协议。每台主机都安装有flannel。k8s定义的flannel网络为10.0.0.0/16，各主机的flannel从这个网络申请一个子网。pod1所在的主机的flannel子网为10.0.14.1/24，pod2所在主机的flannel子网为10.0.5.1/24。每台主机有cni0和flannel.1虚拟网卡。
+  * `cni0为在同一主机pod共用的网桥`，当kubelet创建容器时，将为此容器创建虚拟网卡vethxxx，并桥接到cni0网桥。
+  * flannel.1是一个tun虚拟网卡，`接收不在同一主机的POD的数据`，然后将收到的数据转发给flanneld进程。
+  
+## 1. pod1到pod2的网络
 
 pod1路由表：
 
@@ -22,7 +23,7 @@ default via 192.168.93.254 dev eno16777984  proto static  metric 100
 pod1 IP地址:10.0.14.15
 pod2 IP地址:10.0.5.150
 
-pod1与pod2不在同一台主机
+## 1.1. pod1与pod2不在同一台主机
 
 下面是从pod1 ping pod2的数据包流向
 1. pod1(10.0.14.15)向pod2(10.0.5.150)发送ping，查找pod1路由表，把数据包发送到cni0(10.0.14.1)
@@ -34,16 +35,12 @@ pod1与pod2不在同一台主机
 7. flannel.1虚拟网卡查找host2路由表，把数据包转发给cni0网桥，cni0网桥再把数据包转发给pod2
 8. pod2响应给pod1的数据包与1-7步类似
 下面是这次ping数据包的wireshark解析出的协议数据:
-pod1 ping请求:
 
-pod2响应:
-
-
-pod1与pod2在同一台主机
+## 1.2. pod1与pod2在同一台主机
 
 pod1和pod2在同一台主机的话，由cni0网桥直接转发请求到pod2，不需要经过flannel。
 
-pod到service的网络
+## 2. pod到service的网络
 
 创建一个service时，相应会创建一个指向这个service的域名，域名规则为{服务名}.{namespace}.svc.{集群名称}。之前service ip的转发由iptables和kube-proxy负责，目前基于性能考虑，全部为iptables维护和转发。iptables则由kubelet维护。service仅支持udp和tcp协议，所以像ping的icmp协议是用不了的，所以无法ping通service ip。
 现在我们尝试看看在pod1向kube-dns的service ip 10.16.0.10:53发送udp请求是如何转发的。
@@ -67,7 +64,8 @@ KUBE-SVC-TCOU7JCQXEZGVUNU不做任何操作，跳至KUBE-SEP-L5MHPWJPDKD7XIFG链
 KUBE-SEP-L5MHPWJPDKD7XIFG里对此数据包作了DNAT到10.0.0.46:53，其中10.0.0.46即为kube-dns的pod ip
 查找与10.0.0.46匹配的路由，转发数据包到flannel.1
 之后的数据包流向就与上面的pod1到pod2的网络一样了
-pod到外网
+
+## 3. pod到外网
 
 pod向qq.com发送请求
 查找路由表,转发数据包到宿主的网卡
