--- a/program/docker/8.容器网络/4.calico/1.如何部署 Calico 网络.md
+++ b/program/docker/8.容器网络/4.calico/1.如何部署 Calico 网络.md
@@ -27,7 +27,8 @@ mkdir -p /opt/etcd
 curl -L ${DOWNLOAD_URL}/${ETCD_VER}/etcd-${ETCD_VER}-linux-amd64.tar.gz -o /opt/etcd/etcd-${ETCD_VER}-linux-amd64.tar.gz
 tar xzvf /opt/etcd/etcd-${ETCD_VER}-linux-amd64.tar.gz --strip-components=1
 tar xzvf /opt/etcd/etcd-v2.3.7-linux-amd64.tar.gz --strip-components=1
-cp -f /opt/etcd/etcd* /usr/local/bin/
+tar xzvf /opt/etcd/etcd-v3.3.5-linux-amd64.tar.gz --strip-components=1
+cp /opt/etcd/etcd /usr/local/bin/ && cp /opt/etcd/etcdctl /usr/local/bin/
 rm -rf etcd etcdctl default.etcd Documentation/ *.json *.md /usr/local/bin/etcd /usr/local/bin/etcdctl
 # 在 host 172.20.62.127 上运行如下命令启动 etcd：
 etcd -listen-client-urls http://172.20.62.127:2379 -advertise-client-urls http://172.20.62.127:2379
@@ -36,6 +37,7 @@ etcd -listen-client-urls http://0.0.0.0:2379 -advertise-client-urls http://0.0.0
 etcdctl ls /
 ### 2 etcd 安装配置详细方法请参考 flannel 章节。
 ### 3 修改 host1 和 host2 的 Docker daemon 配置文件 vi /etc/sysconfig/docker， 连接 etcd：
+vi /usr/lib/systemd/system/docker.service
 vi /etc/sysconfig/docker
 # 原有配置
 OPTIONS='--selinux-enabled --log-driver=journald --signature-verification=false'
@@ -87,3 +89,5 @@ curl -L http://172.20.62.127:2379/v2/keys/hello
 1. https://mp.weixin.qq.com/s/7o8QxGydMTUe4Q7Tz46Diw
 2. [centos7下安装docker（15.7容器跨主机网络---calico）](https://www.cnblogs.com/lkun/p/7857453.html)
 3. [如何使用Etcdctl与Etcd——CoreOS的分布式键-值存储](https://blog.csdn.net/zstack_org/article/details/54924651)
+4. [Calico网络方案](https://www.cnblogs.com/netonline/p/9720279.html)
+5. [Docker网络解决方案-Calico部署记录](https://www.cnblogs.com/kevingrace/p/6864804.html)
