--- a/linux/概念/8.路由观念与路由器设定/2.Linux 路由表详解及 route 命令详解.md
+++ b/linux/概念/8.路由观念与路由器设定/2.Linux 路由表详解及 route 命令详解.md
@@ -1,6 +1,6 @@
 Linux 路由表详解及 route 命令详解 - kikajack的博客 - CSDN博客 https://blog.csdn.net/kikajack/article/details/80457841
 
-Linux 内核的路由表
+## 1. Linux 内核的路由表
 通过 route 命令查看 Linux 内核的路由表：
 
 [root@VM_139_74_centos ~]# route
@@ -25,28 +25,7 @@ Destination     Gateway         Genmask         Flags Metric Ref    Use Iface
 172.18.0.0      0.0.0.0         255.255.0.0     U     0      0        0 br-0ab63c131848
 172.19.0.0      0.0.0.0         255.255.0.0     U     0      0        0 br-bccbfb788da0
 172.20.0.0      0.0.0.0         255.255.0.0     U     0      0        0 br-7485db25f958
-1
-2
-3
-4
-5
-6
-7
-8
-9
-10
-11
-12
-13
-14
-15
-16
-17
-18
-19
-20
-21
-22
+
 各列字段说明：
 
 列	含义
@@ -67,8 +46,9 @@ R 恢复动态路由产生的表项
 D 由路由的后台程序动态地安装
 M 由路由的后台程序修改
 ! 拒绝路由
-Linux 内核的路由种类
-主机路由
+
+## 2. Linux 内核的路由种类
+### 主机路由
 路由表中指向单个 IP 地址或主机名的路由记录，其 Flags 字段为 H。下面示例中，对于 10.0.0.10 这个主机，通过网关 10.139.128.1 网关路由：
 
 [root@VM_139_74_centos ~]# route -n
@@ -76,34 +56,23 @@ Kernel IP routing table
 Destination     Gateway         Genmask         Flags Metric Ref    Use Iface
 10.0.0.10       10.139.128.1    255.255.255.255 UGH   0      0        0 eth0
 ...
-1
-2
-3
-4
-5
-网络路由
+### 网络路由
 主机可以到达的网络。下面示例中，对于 10.0.0.0/24 这个网络，通过网关 10.139.128.1 网关路由：
 
 [root@VM_139_74_centos ~]# route -n
 Kernel IP routing table
 Destination     Gateway         Genmask         Flags Metric Ref    Use Iface
 10.0.0.0        10.139.128.1    255.255.255.0   UG    0      0        0 eth0
-1
-2
-3
-4
-默认路由
+
+### 默认路由
 当目标主机的 IP 地址或网络不在路由表中时，数据包就被发送到默认路由（默认网关）上。默认路由的 Destination 是 default 或 0.0.0.0。
 
 [root@VM_139_74_centos ~]# route
 Kernel IP routing table
 Destination     Gateway         Genmask         Flags Metric Ref    Use Iface
 default         gateway         0.0.0.0         UG    0      0        0 eth0
-1
-2
-3
-4
-route 命令
+
+## 3. route 命令
 route 命令可以显示或设置 Linux 内核中的路由表，主要是静态路由。
 
 对于局域网中的 Linux 主机，要想访问 Internet，需要将局域网的网关 IP 地址设置为这个主机的默认路由。在命令行中通过 route 命令添加的路由在网卡重启或机器重启后失效。可以在 /etc/rc.local 中添加 route 命令来保证路由设置永久有效。
@@ -129,8 +98,8 @@ dev：路由记录所表示的网络接口
 添加路由 add
 可以添加一条可用路由，或添加一条要屏蔽的路由。
 
-添加路由
-添加主机路由
+## 4. 路由命令
+### 添加主机路由
 添加主机路由时，需要指定网络 ID 和主机 ID，此时需要设置 netmask 255.255.255.255：
 
 [root@VM_139_74_centos ~]# route add -net 10.0.0.10 netmask 255.255.255.255 gw 10.139.128.1 dev eth0
@@ -139,13 +108,7 @@ Kernel IP routing table
 Destination     Gateway         Genmask         Flags Metric Ref    Use Iface
 10.0.0.10       10.139.128.1    255.255.255.255 UGH   0      0        0 eth0
 ...
-1
-2
-3
-4
-5
-6
-添加网络路由
+### 添加网络路由
 添加网络路由时，只需指定网络 ID，通过 netmask 设置掩码长度：
 
 [root@VM_139_74_centos ~]# route add -net 10.0.0.0 netmask 255.255.255.0 gw 10.139.128.1 dev eth0
@@ -154,13 +117,8 @@ Kernel IP routing table
 Destination     Gateway         Genmask         Flags Metric Ref    Use Iface
 10.0.0.0        10.139.128.1    255.255.255.0   UG    0      0        0 eth0
 ...
-1
-2
-3
-4
-5
-6
-添加添加同一个局域网的主机
+
+### 添加添加同一个局域网的主机
 不指定 gw 选项时，添加的路由记录不使用网关：
 
 [root@VM_139_74_centos ~]# route add -net 224.0.0.0 netmask 240.0.0.0 dev eth0
@@ -169,43 +127,28 @@ Kernel IP routing table
 Destination     Gateway         Genmask         Flags Metric Ref    Use Iface
 224.0.0.0       0.0.0.0         240.0.0.0       U     0      0        0 eth0
 ...
-1
-2
-3
-4
-5
-6
-屏蔽路由
+
+### 屏蔽路由
 [root@VM_139_74_centos ~]# route add -net 224.0.0.0 netmask 240.0.0.0 reject
 [root@VM_139_74_centos ~]# route -n
 Kernel IP routing table
 Destination     Gateway         Genmask         Flags Metric Ref    Use Iface
 224.0.0.0       -               240.0.0.0       !     0      -        0 -
 ...
-1
-2
-3
-4
-5
-6
-删除路由记录
+
+### 删除路由记录
 跟添加路由类似，可以删除一条可用路由，或删除一条屏蔽的路由。
 
-删除可用路由
+### 删除可用路由
 route del -net 224.0.0.0 netmask 240.0.0.0
 1
-删除屏蔽的路由
+### 删除屏蔽的路由
 route del -net 224.0.0.0 netmask 240.0.0.0 reject
-1
-删除和添加设置默认网关
+
+### 删除和添加设置默认网关
 添加或删除默认网关时，Linux 会自动检查网关的可用性：
 
 [root@VM_139_74_centos ~]# route add default gw 192.168.1.1
 SIOCADDRT: Network is unreachable
 [root@VM_139_74_centos ~]# route del default gw 192.168.1.1
 SIOCDELRT: No such process
---------------------- 
-作者：kikajack 
-来源：CSDN 
-原文：https://blog.csdn.net/kikajack/article/details/80457841 
-版权声明：本文为博主原创文章，转载请附上博文链接！
