--- a/linux/命令/cat/1.cat-EOF.md
+++ b/linux/命令/cat/1.cat-EOF.md
@@ -2,12 +2,13 @@ cat > file << EOF 的用法
 
 https://www.cnblogs.com/chenjingchao/p/6259572.html
 
-cat> 文件名<<eof  
+cat > 文件名<<eof  
 用来创建文件
 在这之后输入任何东西 都是在 文件里的
 输入完成之后EOF结尾  代表结束
 比如
 
+```sh
 cat > 1.txt <<eof
 1
 2
@@ -15,8 +16,9 @@ cat > 1.txt <<eof
 4
 5
 eof
+# 就是创建1.txt这个文件里面内容是 1 2 3 4 5
+```
 
-就是创建1.txt这个文件里面内容是 1 2 3 4 5
 
 ============================================
 cat <<EOF与cat <<-EOF的区别（原文：http://blog.csdn.net/apache0554/article/details/45508631）
