--- a/program/python/Scrapy/1.安装scrapy报错 Python.h.md
+++ b/program/python/Scrapy/1.安装scrapy报错 Python.h.md
@@ -15,6 +15,7 @@ sudo apt-get install python-dev
 
 yum list *python-devel*
 yum install -y python-devel
+pip install Scrapy
 --------------------- 
 作者：Edward-liang 
 来源：CSDN 
