--- a/program/python/Scrapy/2.Scrapy简单入门及实例讲解.md
+++ b/program/python/Scrapy/2.Scrapy简单入门及实例讲解.md
@@ -56,46 +56,26 @@ Scrapy运行流程大概如下：
  
 
 ## 二、爬虫举例
-
- 
-
 入门篇：美剧天堂前100最新（http://www.meijutt.com/new100.html）
 
 1、创建工程
-
 scrapy startproject movie
- 
-
 2、创建爬虫程序
-
 cd movie
 scrapy genspider meiju meijutt.com
- 
-
 3、自动创建目录及文件
-
-
-
- 
-
 4、文件说明：
-
 scrapy.cfg  项目的配置信息，主要为Scrapy命令行工具提供一个基础的配置信息。（真正爬虫相关的配置信息在settings.py文件中）
 items.py    设置数据存储模板，用于结构化数据，如：Django的Model
 pipelines    数据处理行为，如：一般结构化的数据持久化
 settings.py 配置文件，如：递归的层数、并发数，延迟下载等
 spiders      爬虫目录，如：创建文件，编写爬虫规则
 注意：一般创建爬虫文件时，以网站域名命名
-
- 
-
 5、设置数据存储模板
-
 　　items.py
 
 ```py
 import scrapy
- 
  
 class MovieItem(scrapy.Item):
     # define the fields for your item here like:
@@ -154,21 +134,12 @@ scrapy crawl meiju --nolog
 ## 2. 进阶篇：爬取校花网（http://www.xiaohuar.com/list-1-1.html）
 
 1、创建一个工程
-
 scrapy startproject pic
- 
-
 2、创建爬虫程序
-
 cd pic
 scrapy genspider xh xiaohuar.com
- 
-
 3、自动创建目录及文件
- 
-
 4、文件说明：
-
 scrapy.cfg  项目的配置信息，主要为Scrapy命令行工具提供一个基础的配置信息。（真正爬虫相关的配置信息在settings.py文件中）
 items.py    设置数据存储模板，用于结构化数据，如：Django的Model
 pipelines    数据处理行为，如：一般结构化的数据持久化
@@ -249,14 +220,7 @@ class PicPipeline(object):
 cd pic
 scrapy crawl xh --nolog
  
-
-结果：
-
-
-
- 
-
-## 终极篇：我想要所有校花图
+## 3. 终极篇：我想要所有校花图
 
 注明：基于进阶篇再修改为终极篇
 
