--- a/program/java/99.面试/20181215.md
+++ b/program/java/99.面试/20181215.md
@@ -1,3 +1,6 @@
+
+[十大经典排序算法](https://mp.weixin.qq.com/s/5dY7K-vU912LVYvaAcvwUQ)
+
 精选30道Java笔试题解答 - Alexia(minmin) - 博客园 https://www.cnblogs.com/lanxuezaipiao/p/3371224.html
 
 都是一些非常非常基础的题，是我最近参加各大IT公司笔试后靠记忆记下来的，经过整理献给与我一样参加各大IT校园招聘的同学们，纯考Java基础功底，老手们就不用进来了，免得笑话我们这些未出校门的孩纸们，但是IT公司就喜欢考这些基础的东西，所以为了能进大公司就~~~当复习期末考吧。花了不少时间整理，在整理过程中也学到了很多东西，请大家认真对待每一题~~~
@@ -43,15 +46,11 @@ System.err.println(str1 == str2);
 4. 下列说法正确的有（）
 
 A． class中的constructor不可省略
-
 B． constructor必须与class同名，但方法不能与class同名
-
 C． constructor在一个对象被new时执行
-
 D．一个class只能定义一个constructor
 
 答案：C 
-
 解析：这里可能会有误区，其实普通的类方法是可以和类名同名的，和构造方法唯一的区分就是，构造方法没有返回值。
 
  
@@ -110,11 +109,8 @@ A. Oracle    B MySql    C IMS     D MongoDB
 答案：AB
 
 解答：IMS（Information Management System ）数据库是IBM公司开发的两种数据库类型之一; 
-
 一种是关系数据库，典型代表产品：DB2；
-
 另一种则是层次数据库，代表产品：IMS层次数据库。
-
 非关系型数据库有MongoDB、memcachedb、Redis等。
 
  
@@ -124,18 +120,14 @@ A. Oracle    B MySql    C IMS     D MongoDB
 答案：是
 
 解析：线程分为守护线程和非守护线程（即用户线程）。
-
 只要当前JVM实例中尚存在任何一个非守护线程没有结束，守护线程就全部工作；只有当最后一个非守护线程结束时，守护线程随着JVM一同结束工作。
 守护线程最典型的应用就是 GC (垃圾回收器)
  
 
-9. volatile关键字是否能保证线程安全？（）
+## 9. volatile关键字是否能保证线程安全？（）
 
 答案：不能
-
-解析：volatile关键字用在多线程同步中，可保证读取的可见性，JVM只是保证从主内存加载到线程工作内存的值是最新的读取值，而非cache中。但多个线程对
-
-volatile的写操作，无法保证线程安全。例如假如线程1，线程2 在进行read,load 操作中，发现主内存中count的值都是5，那么都会加载这个最新的值，在线程1堆count进行修改之后，会write到主内存中，主内存中的count变量就会变为6；线程2由于已经进行read,load操作，在进行运算之后，也会更新主内存count的变量值为6；导致两个线程及时用volatile关键字修改之后，还是会存在并发的情况。
+解析：volatile关键字用在多线程同步中，可保证读取的可见性，JVM只是保证从主内存加载到线程工作内存的值是最新的读取值，而非cache中。但多个线程对volatile的写操作，无法保证线程安全。例如假如线程1，线程2 在进行read,load 操作中，发现主内存中count的值都是5，那么都会加载这个最新的值，在线程1堆count进行修改之后，会write到主内存中，主内存中的count变量就会变为6；线程2由于已经进行read,load操作，在进行运算之后，也会更新主内存count的变量值为6；导致两个线程及时用volatile关键字修改之后，还是会存在并发的情况。
 
 
 
@@ -157,16 +149,13 @@ D WeakMap继承自HashMap
 
 
 
-11. 存在使i + 1 < i的数吗（）
+## 11. 存在使i + 1 < i的数吗（）
 
 答案：存在
-
 解析：如果i为int型，那么当i为int能表示的最大整数时，i+1就溢出变成负数了，此时不就<i了吗。
-
 扩展：存在使i > j || i <= j不成立的数吗（）
 
 答案：存在
-
 解析：比如Double.NaN或Float.NaN，感谢@BuilderQiu网友指出。
 
  
