--- a/language/语法/20181217.md
+++ b/language/语法/20181217.md
@@ -10,5 +10,33 @@ Life is a journey with trouble, but with care and wisdom you can ＿＿＿ any p
 
 生活就像是一场有麻烦的旅程，只有用关心和智慧才能解决你所面对的任何问题．
 
+Waiting to do something until you can be sure of doing it exactly right means waiting for ever. 
+~~~等待有把握时再去做一件事，往往意味着永远的等待。
+
 B
  答案：本题关键词是care and wisdom与problem．根据句意可知care and wisdom是解决problem的条件．work out解决，算出 hand out 分发find out找出 put out扑灭 故选B．
+
+周一词汇日
+各类服装常用英语词汇
+clothes衣服
+coat 外套
+sweater 毛衣
+vest背心 
+waistcoat/weskit 马甲
+shirt 衬衣
+suit 西装
+slip-on 套裙
+dust coat 风衣
+down coat 羽绒服
+jacket夹克
+layette 婴儿的全套服装 
+uniform 制服 
+overalls 工装裤 
+rompers 连背心的背带裤 
+formal dress 礼服 
+tailcoat, morning coat 大礼服 
+evening dress 夜礼服 
+dress coat, tails 燕尾服,礼服 
+nightshirt 男式晚礼服 
+dinner jacket 无尾礼服 (美作:tuxedo) 
+full dress uniform 礼服制服 
