--- a/program/jenkins/99.问题/2.wrapper script does not seem to be touching the log file.md
+++ b/program/jenkins/99.问题/2.wrapper script does not seem to be touching the log file.md
@@ -9,4 +9,5 @@ https://issues.jenkins-ci.org/browse/JENKINS-48300?focusedCommentId=330340&page=
 The workaround I tried was to go to Manage Jenkins -> System Console
 ```groovy
 System.setProperty("org.jenkinsci.plugins.durabletask.BourneShellScript.HEARTBEAT_CHECK_INTERVAL", 36000)
+System.setProperty("org.jenkinsci.plugins.durabletask.BourneShellScript.HEARTBEAT_CHECK_INTERVAL", '36000')
 ```
