--- a/aliyun/1.云计算acp/4.负载均衡SLB.md
+++ b/aliyun/1.云计算acp/4.负载均衡SLB.md
@@ -201,6 +201,9 @@ https://help.aliyun.com/knowledge_detail/66280.html
 https://help.aliyun.com/knowledge_detail/55201.html
 7. 可以使用PKCS#12（PFX）格式的证书么？
 可以。但在上传证书前，您需要将证书转换为PEM格式，详情参见转换证书格式。
+# 9 教程专区 
+## 9.6 基于域名/URL路径进行转发
+https://help.aliyun.com/document_detail/85955.html
 # 其他
 1. [SLB 配置获取真实IP](https://help.aliyun.com/knowledge_detail/60529.html)
 X-Forwarded-For 是一个 HTTP 扩展头部，用来表示 HTTP 请求端真实 IP。
