--- a/program/python/4.tensorflow/3.tensorflow入门/1.hello_tensorflow.md
+++ b/program/python/4.tensorflow/3.tensorflow入门/1.hello_tensorflow.md
@@ -5,6 +5,7 @@
 
 ```sh
 git clone https://github.com/cookeem/TensorFlow_learning_notes
+# C:\resources\python\ipynb\TensorFlow_learning_notes
 cd TensorFlow_learning_notes
 jupyter notebook
 ```
