--- a/program/kubernetes/6.存储管理/3.glusterfs/1.使用glusterfs 文件系统做k8s 的持久化存储.md
+++ b/program/kubernetes/6.存储管理/3.glusterfs/1.使用glusterfs 文件系统做k8s 的持久化存储.md
@@ -4,6 +4,7 @@
 
 一、使用如下脚本创建数据卷
 
+```sh
 #!/bin/bash
 
 if [ $# -lt 3 ];
@@ -27,11 +28,13 @@ gluster volume start $volumeName
 echo "#########volume list #########"
 gluster volume list
 # sh createVolume.sh k8s-volume-jenkins-master jenkins-master 20
-
 shell 脚本变量说明：$1 卷名称 $2 挂载路径 $3卷大小
+```
+
 
 二、配置endpoints
 
+```json
 {
   "kind": "Endpoints",
   "apiVersion": "v1",
@@ -90,6 +93,7 @@ shell 脚本变量说明：$1 卷名称 $2 挂载路径 $3卷大小
     }
   ]
 }
+```
 # kubectl apply -f glusterfs-endpoints.json
 
 配置endpoints service
@@ -111,7 +115,7 @@ shell 脚本变量说明：$1 卷名称 $2 挂载路径 $3卷大小
 三、创建pv
 
 kubectl create -f jenkins-master-pv.yaml
-
+```yaml
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -126,6 +130,7 @@ spec:
     endpoints: "glusterfs-cluster"
     path: "k8s-volume-jenkins-master"
     readOnly: false
+```
 四、创建pvc
 
 # kubectl create -f jenkins-master-pvc.yaml
