--- a/program/python/0.核心/mail/1.SMTP发送邮件.md
+++ b/program/python/0.核心/mail/1.SMTP发送邮件.md
@@ -12,6 +12,7 @@ msg = MIMEText('hello, send by Python...', 'plain', 'utf-8')
 
 然后，通过SMTP发出去：
 
+```sh
 # 输入Email地址和口令:
 from_addr = raw_input('From: ')
 password = raw_input('Password: ')
@@ -26,6 +27,7 @@ server.set_debuglevel(1)
 server.login(from_addr, password)
 server.sendmail(from_addr, [to_addr], msg.as_string())
 server.quit()
+```
 我们用set_debuglevel(1)就可以打印出和SMTP服务器交互的所有信息。SMTP协议就是简单的文本命令和响应。login()方法用来登录SMTP服务器，sendmail()方法就是发邮件，由于可以一次发给多个人，所以传入一个list，邮件正文是一个str，as_string()把MIMEText对象变成str。
 
 如果一切顺利，就可以在收件人信箱中收到我们刚发送的Email：
@@ -39,6 +41,7 @@ send-mail
 明明收到了邮件，却提示不在收件人中。
 这是因为邮件主题、如何显示发件人、收件人等信息并不是通过SMTP协议发给MTA，而是包含在发给MTA的文本中的，所以，我们必须把From、To和Subject添加到MIMEText中，才是一封完整的邮件：
 
+```sh
 # -*- coding: utf-8 -*-
 
 from email import encoders
@@ -68,6 +71,7 @@ server.set_debuglevel(1)
 server.login(from_addr, password)
 server.sendmail(from_addr, [to_addr], msg.as_string())
 server.quit()
+```
 我们编写了一个函数_format_addr()来格式化一个邮件地址。注意不能简单地传入name <addr@example.com>，因为如果包含中文，需要通过Header对象进行编码。
 
 msg['To']接收的是字符串而不是list，如果有多个邮件地址，用,分隔即可。
@@ -95,9 +99,10 @@ msg = MIMEText('<html><body><h1>Hello</h1>' +
 
 html-mail
 
-发送附件
+## 发送附件
 如果Email中要加上附件怎么办？带附件的邮件可以看做包含若干部分的邮件：文本和各个附件本身，所以，可以构造一个MIMEMultipart对象代表邮件本身，然后往里面加上一个MIMEText作为邮件正文，再继续往里面加上表示附件的MIMEBase对象即可：
 
+```py
 # 邮件对象:
 msg = MIMEMultipart()
 msg['From'] = _format_addr(u'Python爱好者 <%s>' % from_addr)
@@ -121,6 +126,7 @@ with open('/Users/michael/Downloads/test.png', 'rb') as f:
     encoders.encode_base64(mime)
     # 添加到MIMEMultipart:
     msg.attach(mime)
+```
 然后，按正常发送流程把msg（注意类型已变为MIMEMultipart）发送出去，就可以收到如下带附件的邮件：
 
 mimemultipart
