--- a/program/python/4.tensorflow/6.图像识别与卷积神经网络CNN/1.LeNet/2.卷积神经网络的参数计算.md
+++ b/program/python/4.tensorflow/6.图像识别与卷积神经网络CNN/1.LeNet/2.卷积神经网络的参数计算.md
@@ -1,9 +1,9 @@
 卷积神经网络的参数计算 - 绝望的乐园 - CSDN博客 https://blog.csdn.net/qian99/article/details/79008053
 
-前言
+## 1. 前言
 这篇文章会简单写一下卷积神经网络上参数的计算方法，然后计算各个常见神经网络的参数。一个是加强对网络结构的了解，另一方面对网络参数的量级有一个大概的认识，也可以当作备忘录，免得想知道的时候还要再算。
 
-## 参数计算方法
+## 2. 参数计算方法
 全连接的参数计算就不说了，比较简单。
 首先，简单说一下卷积网络的参数计算。下图中是一个32x32x3的输入，然后用一个5x5x3的卷积对其中某个位置的计算，这里算的是一个点积，所以输出是一个单独的标量的值。
 
@@ -11,7 +11,7 @@
 
 如果我有6个上面说的filter，那么，我就会得到一个28x28x6的输出。
 
-这就是一个最基础的卷积操作，那么这里用到的参数是多少呢？我们只需要把每个filter的参数累加起来，当然，不要忘了加上bias：5x5x3x6 + 6 = 456
+这就是一个最基础的卷积操作，那么这里用到的参数是多少呢？`我们只需要把每个filter的参数累加起来，当然，不要忘了加上bias：5x5x3x6 + 6 = 456`
 
 另外一个需要计算的就是进行卷积以后的输出的大小，从下面的图上看就很好理解了，用公式直接算就好了。其中N是输入图像的size，F是filter的size，stride是滑动的步长。
 
