--- a/linux/概念/2.基础网络概念/4.传输层/2.TCP三次握手四次挥手.md
+++ b/linux/概念/2.基础网络概念/4.传输层/2.TCP三次握手四次挥手.md
@@ -1,6 +1,6 @@
 
 
-### 2.4.2 TCP 的三向交握
+## 1. TCP 的三向交握
 
 * 三次握手(Three-way handshake)
   * 封包发送：客户端使用一个大于1024端口，TCP表头添加SYN=1，记下联机序号Sequence (seq=10001)
@@ -11,3 +11,12 @@
   * 回送确认封包
     * ACK再次发送确认封包(ack = 20001 + 1 = 20002)
   * 服务端收到ACK=1且ack=20002后，开始发送数据
+
+## 2. TCP 四次挥手
+TCP的连接的拆除需要发送四个包，因此称为四次挥手(four-way handshake)。客户端或服务器均可主动发起挥手动作，在socket编程中，任何一方执行close()操作即可产生挥手操作。
+
+
+## 参考
+
+1. 鸟哥的Linux私房菜.服务器架设篇 2.4.2
+2. https://www.cnblogs.com/zmlctt/p/3690998.html
