--- a/program/python/4.tensorflow/5.MNIST数字识别问题/5.MNIST数字识别问题.md
+++ b/program/python/4.tensorflow/5.MNIST数字识别问题/5.MNIST数字识别问题.md
@@ -2,3 +2,9 @@
 ## 1. 第4章介绍了训练神经网络模型时需要考虑的主要问题以及解决这些问题的常用方法
 
 第5章通过一个MNIST数字识别问题来验证第4章中介绍的解决方法。
+
+5.1 介绍MNIST手写体数字识别数据集，并给出TensorFlow程序处理MNIST数据
+5.2 验证不同优化方法带来的性能提升
+5.3 介绍TensorFlow变量重用的问题和变量的命名空间
+5.4 介绍如何将一个神经网络持久化
+5.5 通过完整的TensorFlow程序解决MNIST问题
