--- a/program/java/3.高并发/高并发.md
+++ b/program/java/3.高并发/高并发.md
@@ -1,3 +1,4 @@
 
 
-https://github.com/reymont/concurrency-practice-design.git
+1. https://github.com/reymont/concurrency-practice-design.git
+2. 实战Java高并发程序设计.葛一鸣
