--- a/program/python/4.tensorflow/3.tensorflow入门/3.4TensorFlow实现神经网络/3.4.3神经网络参数与TensorFlow变量.md
+++ b/program/python/4.tensorflow/3.tensorflow入门/3.4TensorFlow实现神经网络/3.4.3神经网络参数与TensorFlow变量.md
@@ -52,7 +52,16 @@ init_op = tf.initialize_all_variables()
 sess.run(init_op)
 ```
 
-## 4. 维度shape和类型type
+## 4. GraphKeys.TRAINABLE_VARIABLES集合
+
+* TensorFlow集合collection
+    1. 所有变量都会被自动加入GraphKeys.VARIABLES这个集合
+    2. tf.all_variables函数可以拿到当前计算图上所有的变量
+    3. 声明变量时参数trainable为True，这个变量将会被加入GraphKeys.TRAINABLE_VARIABLES集合
+    4. tf.trainable_variables函数得到所有需要优化的参数
+    5. TensorFlow中提供的神经网络优化算法会将`GraphKeys.TRAINABLE_VARIABLES`集合中的变量作为默认的优化对象
+
+## 5. 维度shape和类型type
 
 * 变量
     * 变量在构建之后，类型就不能再改变了
