--- a/program/python/4.tensorflow/3.tensorflow入门/3.4TensorFlow实现神经网络/3.4.4通过TensorFlow训练神经网络模型.md
+++ b/program/python/4.tensorflow/3.tensorflow入门/3.4TensorFlow实现神经网络/3.4.4通过TensorFlow训练神经网络模型.md
@@ -84,7 +84,11 @@ cross_entropy = -tf.reduce_mean(y_ * tf.log(tf.clip_by_value(y, 1e-10, 1.0)))
 train_step = tf.train.AdamOptimizer(0.001).minimize(cross_entropy)
 ```
 
-* 通过运行sess.run(train_step)就可以对所有在GraphKeys.TRAINABLE_VARIABLES集合中的变量进行优化，使得在当前batch下损失函数更小
+* 通过运行sess.run(train_step)就可以对所有在`GraphKeys.TRAINABLE_VARIABLES`集合中的变量进行优化，使得在当前batch下损失函数更小
+* 交叉熵
+    1. 交叉熵刻画的是两个概率分布之间的距离，或可以说它刻画的是通过概率分布q来表达概率分布p的困难程度，p代表正确答案，q代表的是预测值，交叉熵越小，两个概率的分布约接近。
+    2. 在 4.2.1经典损失函数 中有详细介绍
+
 
 
 ## 6. tf.clip_by_value的用法
@@ -124,3 +128,4 @@ tf.reduce_mean(x)  # 1.5
 3. [Tensorflow一些常用基本概念与函数](https://www.cnblogs.com/wuzhitj/p/6431381.html)
 4. [tensorflow的tf.reduce_mean函数](https://blog.csdn.net/liangyihuai/article/details/79050018)
 5. [tensorflow入门之placeholder](https://blog.csdn.net/zhangshaoxing1/article/details/68957896/)
+6. [交叉熵](https://blog.csdn.net/weixin_37567451/article/details/80895309)
