--- a/program/python/4.tensorflow/4.深层神经网络DNN/4.2损失数定义/4.2.1经典损失函数.md
+++ b/program/python/4.tensorflow/4.深层神经网络DNN/4.2损失数定义/4.2.1经典损失函数.md
@@ -8,3 +8,15 @@
 
 ## 2. 交叉熵
 
+* 交叉熵
+    1. 交叉熵是一个信息论中的概念，是用来估算平均编码长度的
+    2. 给定两个概率分布p和q，通过q来表示p的交叉熵为：H(p,q) = -∑p(x)log q(x)
+    3. 交叉熵刻画的是两个概率分布之间的距离
+
+## 3. Softmax
+
+* softmax
+    1. Softmax回归将神经网络前向传播得到的结果变成概率分布
+    2. 原始神经网络的输出被用作置信度来生成新的输出
+    3. 交叉熵函数不是对称的：H(p,q)≠H(q,p)，刻画的是通过概率分布q来表达概率分布p的困难程度
+
