--- a/program/python/4.tensorflow/3.tensorflow入门/3.4TensorFlow实现神经网络/3.4.2前向传播算法简介.md
+++ b/program/python/4.tensorflow/3.tensorflow入门/3.4TensorFlow实现神经网络/3.4.2前向传播算法简介.md
@@ -27,3 +27,8 @@
 a = tf.matmul(x, w1)
 b = tf.matmul(a, w2)
 ```
+
+## 参考
+
+1. [搭建神经网络](https://www.cnblogs.com/gengyi/p/9813109.html)
+2. [全连接网络实战(输入手写数字输出识别结果)](https://www.cnblogs.com/gengyi/p/10073084.html)
