--- a/program/python/04.tensorflow/08.循环神经网络RNN/8.1循环神经网络简介RNN/8.1循环神经网络简介RNN.md
+++ b/program/python/04.tensorflow/08.循环神经网络RNN/8.1循环神经网络简介RNN/8.1循环神经网络简介RNN.md
@@ -31,6 +31,37 @@
 * 因为该神经网络的输出为当前时刻的状态，于是输出层的节点个数也为h，循环体中的参数个数为(h+x)*h+h
 * 循环神经网络还需要一个全连接神经网络将当前时刻的状态转化为最终的输出
 
-## 序列过长
+## 7. 循环神经网络的前向传播的计算过程
 
-序列过长会导致优化时出现梯度消散的问题(the vanishing gradient problem)，所以实际中一般会规定一个最大长度，当序列长度超过规定长度之后会对序列进行截断
+![循环神经网络的前向传播的计算过程](循环神经网络的前向传播的计算过程.png)
+![全连接的计算详解](全连接的计算详解.png)
+
+```py
+X = [1,2]
+state = [0.0, 0.0]
+w_cell_state = np.asarray([[0.1, 0.2], [0.3, 0.4]])
+w_cell_input = np.asarray([0.5, 0.6])
+b_cell = np.asarray([0.1, -0.1])
+w_output = np.asarray([[1.0], [2.0]])
+b_output = 0.1
+
+print (np.dot(state, w_cell_state) + X[0] * w_cell_input)
+print (np.dot(state, w_cell_state) + X[0] * w_cell_input + b_cell) 
+print ("state 1:",np.tanh(np.dot(state, w_cell_state) + X[0] * w_cell_input + b_cell))
+print (np.dot((np.tanh(np.dot(state, w_cell_state) + X[0] * w_cell_input + b_cell)), w_output))
+
+for i in range(len(X)):
+    before_activation = np.dot(state, w_cell_state) + X[i] * w_cell_input + b_cell
+    state = np.tanh(before_activation)
+    final_output = np.dot(state, w_output) + b_output
+    print "before activation: ", before_activation
+    print "state: ", state
+    print "output: ", final_output
+```
+
+
+## 8. 序列过长
+
+* 梯度消散
+    1. 序列过长会导致优化时出现梯度消散的问题(the vanishing gradient problem)，
+    2. 实际中一般会规定一个最大长度，当序列长度超过规定长度之后会对序列进行截断
