--- a/program/python/04.tensorflow/08.循环神经网络RNN/8.2长短时记忆网络(LSTM)结构/8.2长短时记忆网络(LSTM)结构.md
+++ b/program/python/04.tensorflow/08.循环神经网络RNN/8.2长短时记忆网络(LSTM)结构/8.2长短时记忆网络(LSTM)结构.md
@@ -30,7 +30,7 @@
 2. 输出门
     1. `输出门`根据最新的状态、上一时刻的输出和当前的输入来决定该时刻的输出
 
-### 4. tensorflow中的实现
+### 4. tensorflow中的实现 BasicLSTMCell
 
 ```py
 #定义一个LSTM结构。LSTM中使用的变量也会在该函数中自动声明
