--- a/program/python/04.tensorflow/08.循环神经网络RNN/8.4循环神经网络样例应用/8.4.2时间序列预测.md
+++ b/program/python/04.tensorflow/08.循环神经网络RNN/8.4循环神经网络样例应用/8.4.2时间序列预测.md
@@ -1,2 +1,23 @@
 
 ## 1. Penn TreeBank (PTB)
+
+## 2. 语言模型
+
+1. 语言模型
+    1. 语言模型的目的是为了计算一个句子的出现概率
+2. n-gram模型
+    1. 当前的出现概率仅仅与前面的n-1个单词相关
+    2. n-gram模型里的n指的是当前单词依赖它前面的单词的个数
+    3. 当n越大时，n-gram模型理论上越准确，但也越复杂，需要的计算量和训练语料数据量也就越大
+    4. n-gram模型的参数一般采用最大似然估计 maximum likelihood estimation, MLE 的方法计算
+
+## 3. 复杂度 perplexity
+
+1. 复杂度
+    1. 语言模型效果的评价指标
+    2. perplexity值越小越好
+    3. 复杂度perplexity表示的概念其实是平均分支系统 average branch factor，即模型预测下一个词时的平均可选择数量
+
+## 参考
+
+1. [极大似然估计详解](https://blog.csdn.net/zengxiantao1994/article/details/72787849)
