--- a/program/python/04.tensorflow/05.MNIST数字识别问题/5.1MNIST数据处理/5.1.MNIST数据处理.md
+++ b/program/python/04.tensorflow/05.MNIST数字识别问题/5.1MNIST数据处理/5.1.MNIST数据处理.md
@@ -1,11 +1,11 @@
 
 ## 1. MNIST数据集是NIST数据集的一个子集
 
-包含了60000张图片作为训练数据，10000张图片作为测试数据
+* 包含了60000张图片作为训练数据，10000张图片作为测试数据
 
 ## 2. 验证validation数据
 
-MNIST只提供训练和测试数据，但是为了验证模型训练的效果，一般会从训练数据中划分出一部分数据作为验证validation数据。
+* MNIST只提供训练和测试数据，但是为了验证模型训练的效果，一般会从训练数据中划分出一部分数据作为验证validation数据。
 
 ## 3. TensorFlow处理MNIST数据
 
