--- a/program/python/04.tensorflow/04.深层神经网络DNN/4.4神经网络进一步优化/4.4.3滑动平均模型.md
+++ b/program/python/04.tensorflow/04.深层神经网络DNN/4.4神经网络进一步优化/4.4.3滑动平均模型.md
@@ -27,6 +27,7 @@ with tf.Session() as sess:
     
     # 1. shadow_variable = decay * shadow_variable + (1 - decay) * variable
     # 2. 每次更新完以后，影子变量的值更新
+    # 3. 变量的值为指定的值，如果不指定则使用上一次计算的结果
 
     # 衰减率min{0.99, (1+step)/(10+step)=0.1} = 0.1，
     # varible指定值为5
