--- a/program/groovy/字符串/8.字符串截取substring.md
+++ b/program/groovy/字符串/8.字符串截取substring.md
@@ -2,7 +2,8 @@ http://findsrc.com/groovy/detail/8582
 
 字符串截取需要经常使用到，在groovy中我们可以通过多种方式截取字符串。
 
-## 1、使用substring方法，同java中的字符串截取
+```groovy
+// 1、使用substring方法，同java中的字符串截取
 def log = "Exception on saving user with username:johntheripper"  
    
 def username = log.substring(log.lastIndexOf(":") + 1, log.length())    
@@ -11,12 +12,16 @@ println username // johntheripper
 def usernameWithoutEndIndex = log.substring(log.lastIndexOf(":") + 1)    
 println usernameWithoutEndIndex // johntheripper
 
-## 2、使用subSequence方法，也是Java中的原生方法
+def git = '/jtp/gateway.git'
+   def username = git.substring(git.lastIndexOf("/") + 1, git.lastIndexOf("."))
+   println(username) //gateway
+
+// 2、使用subSequence方法，也是Java中的原生方法
 def log = "Exception on saving user with username:johntheripper"    
 def username = log.subSequence(log.lastIndexOf(":") + 1, log.length())    
 println username // johntheripper
 
-## 3、groovy风格的字符串截取
+// 3、groovy风格的字符串截取
 接下来我们可以了解到groovy风格的字符串截取。
 def text1 = "My last character will be removed soon"    
 println text1[0..-2] // My last character will be removed soo   
@@ -28,7 +33,7 @@ def text3 = "noos em daer lliw uoy ,tneitap eB"
 println text3[-1..0] // Be patient, you will read me soon
 可以看到，groovy风格的字符串截取既简单又容易理解，通过[]号方式定义截取方式。比如0..5代表着索引号从0到5的字符组成的字符串。索引号可以是负数，如果结束索引号为负数则表明从尾部开始截取。如果起始索引号为负数，则表明是反向截取，截取的字符串也是反序的。
 
-## 4、使用getAt方法截取字符串
+// 4、使用getAt方法截取字符串
 def text1 = "crazy fox jumps over lazy dog"    
 println text1.getAt(0..(text1.length() - 5)) // crazy fox jumps over lazy  
     
@@ -36,7 +41,7 @@ def text2 = "keep calm and carry on"
 println text2.getAt(-1..5) // no yrrac dna mlac
 getAt同[]截取是一致的，也同样支持负数。
 
-## 5、字符串减法操作
+// 5、字符串减法操作
 def text1 = "Sorry, I need to separate from you"    
 println text1 - " you" // Sorry, I need to separate from    
  
@@ -45,3 +50,4 @@ println text2.minus(" usage") // Minus string
 可以使用减法操作从字符串中去掉指定字符串。
 
 在groovy中字符串的截取是非常方便的，你既可以像使用java那样去使用也可以使用groovy风格的语法截图字符串。
+```
